--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,9 @@
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="title_activity_login">Accesso</string>
+    <string name="prodotti">&#160;&#160;&#160;Listino Prodotti</string>
+    <string name="clienti">&#160;&#160;&#160;Gestione Clienti</string>
+    <string name="ordini_in_attesa">&#160;&#160;&#160;visualizza Ordini</string>
+    <string name="messaggi">&#160;&#160;&#160;Messaggi</string>
+    <string name="cerca_cliente">cerca cliente</string>
 </resources>
