v. 0.2 ----- REQ01 - Migliorata implementazione del carrello da prodotto preferito

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,22 +26,23 @@
     <string name="delete">Elimina</string>
     <string name="action_send">Invia</string>
     <string name="title_activity_orders_history">Storico Ordini</string>
-    <string name="new_order">Nuovo ordine</string>
+    <string name="new_order">nuovo ordine</string>
     <string name="cart">Carrello: 0</string>
     <string name="waiting_orders">Ordini in attesa</string>
     <string name="title_activity_waiting_orders">Ordini in attesa</string>
     <string name="productCode">product_code</string>
     <string name="actionEditOrder">EDIT_ORDER</string>
-    <string name="new_order_icewer">Nuovo Icewer</string>
+    <string name="new_order_icewer">nuovo Ice Wer</string>
     <string name="title_activity_orders_icewer">Ordine Icewer</string>
-    <string name="title_activity_price_list">Listino Cliente</string>
+    <string name="title_activity_price_list">Listino</string>
     <string name="PICK_PRODUCT_FOR_ORDER_ITEM">pickProductForOrderItem</string>
     <string name="PICK_PRODUCT_FOR_DISCOUNT">pickOnlyProduct</string>
     <string name="discountValue">discountValue</string>
     <string name="discountType">discountType</string>
     <string name="no_customers">Nessun cliente. Aggiorna i dati per favore.</string>
     <string name="no_products">Nessun prodotto. Aggiorna i dati per favore.</string>
-    <string name="no_pricelist">Non hai ancora fatto sconti a questo cliente.</string>
+    <string name="no_products_in_order">Aggiungi un prodotto con il pulsante in basso.</string>
+    <string name="no_pricelist">Nessun prodotto scontato.</string>
     <string name="no_orders">Per questo cliente non hai mai inviato ordini.</string>
     <string name="yes">Si</string>
     <string name="no">No</string>
@@ -51,9 +52,13 @@
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="title_activity_login">Accesso</string>
     <string name="prodotti">&#160;&#160;&#160;Listino Prodotti</string>
-    <string name="clienti">&#160;&#160;&#160;Gestione Clienti</string>
+    <string name="clienti">&#160;&#160;&#160;Clienti</string>
     <string name="ordini_in_attesa">&#160;&#160;&#160;Ordini in attesa</string>
     <string name="messaggi">&#160;&#160;&#160;Messaggi</string>
     <string name="cerca_cliente">cerca cliente</string>
     <string name="title_activity_waiting_orders_all">Ordini in attesa</string>
+    <string name="add_product">Aggiungi prodotto</string>
+    <string name="no_favorite">Non c\'è ancora nessun prodotto preferito.</string>
+    <string name="favorites">Prodotti preferiti</string>
+    <string name="deleteCartItem">Rimuovi dal carrello</string>
 </resources>
